tests-build/tests/fail/macros_invalid_input.stderr
error: the async keyword is missing from the function declaration
 --> $DIR/macros_invalid_input.rs:4:1
  |
4 | fn main_is_not_async() {}
  | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`
 --> $DIR/macros_invalid_input.rs:6:15
  |
6 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
 --> $DIR/macros_invalid_input.rs:9:15
  |
9 | #[tokio::main(threadpool::bar)]
  |               ^^^^^^^^^^^^^^^

error: the async keyword is missing from the function declaration
  --> $DIR/macros_invalid_input.rs:13:1
   |
13 | fn test_is_not_async() {}
   | ^^

error: the test function cannot accept arguments
  --> $DIR/macros_invalid_input.rs:16:27
   |
16 | async fn test_fn_has_args(_x: u8) {}
   |                           ^^^^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`
  --> $DIR/macros_invalid_input.rs:18:15
   |
18 | #[tokio::test(foo)]
   |               ^^^

error: second test attribute is supplied
  --> $DIR/macros_invalid_input.rs:22:1
   |
22 | #[test]
   | ^^^^^^^
